infra/network.tf
resource "aws_vpc" "main" {
  cidr_block       = var.vpc_cidr
  instance_tenancy = "default"
  tags = {
    Name = "${var.project_name}-vpc"
  }
}
# Internet gateway
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "${var.project_name}-igw"
  }
}
# Create route table for public subnet
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  tags   = { 
    Name = "${var.project_name}-pub-rt"
  }
}
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }
}
resource "aws_subnet" "public" {
  count             = var.subnet_count
  vpc_id            = aws_vpc.main.id
  availability_zone = local.az_names[count.index]
  cidr_block        = var.pub_cidrs[count.index]
  tags = {
    Name = "${var.project_name}-Pub[count.index]"
  }
}
# associate public subnets with public route table
resource "aws_route_table_association" "public" {
  count          = var.subnet_count
  subnet_id      = aws_subnet.public.*.id[count.index]
  route_table_id = aws_route_table.public.id
}

# Create route table for private subnet
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id
}
 tags   = { 
   Name = "${var.project_name}-private-rt" 
 }
}
resource "aws_subnet" "private" {
  count             = var.subnet_count
  availability_zone = local.az_names[count.index]
  vpc_id            = aws_vpc.main.id
  cidr_block        = var.pri_cidrs[count.index]
   tags = {
    Name = "${var.project_name}-Pri[count.index]"
  }
}
# associate public subnets with public route table
resource "aws_route_table_association" "private" {
  count          = var.subnet_count
  subnet_id      = aws_subnet.private.*.id[count.index]
  route_table_id = aws_route_table.private.id
}
